# VeedorIA

./: .cursorrules  .gitignore  AGENTS.md  GEMINI.md  README.md
.agents/rules/: INSTITUTIONAL_DESIGN.md  PYTHON_FASTAPI_ARCHITECTURE.md  REACT_VITE_TS_ARCHITECTURE.md  architecture-part01-philosophy-to-configuration-files.md  architecture-part02-database-layer-prisma-orm-to-lifecycle.md  architecture-part03-domain-layer-pydantic-validation-to-custom-validators.md  architecture-part04-server-utilities-to-envelope-responses.md  architecture-part05-fastapi-routers-controllers-to-dependency-injection.md  architecture-part06-security-hardening-cors-to-jwt-auth.md  architecture-part07-performance-concurrency-to-ml-offloading.md  architecture-part08-unit-testing-pytest-to-mocking.md  design-part01-visual-theme-atmosphere-to-inputs-forms.md  design-part02-status-icons-to-tooltips.md  (+8 more)
backend/: .env.example  README.md  alembic.ini  pyproject.toml
backend/migrations/: env.py
backend/migrations/versions/: 5f60e1fac072_add_sync_log_table.py  cc772f004e94_initial_schema.py
backend/src/: config.py
backend/src/cli/: sync_dgcp.py
backend/src/domain/: types.py
backend/src/infrastructure/: database.py  dependencies.py  dgcp_client.py
backend/src/models/: __init__.py  anomaly.py  audit_log.py  contract.py  institution.py  item.py  process.py  supplier.py  sync_log.py  user.py
backend/src/presentation/: main.py
backend/src/presentation/routers/: sync.py
backend/src/services/: sync_service.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  (+1 more)
(+24 files in other folders)
