[tool.poetry]
name = "veedoria-backend"
version = "0.1.0"
description = "FastAPI backend for VeedorIA procurement monitoring"
authors = ["Jerermy Michel Solano Frías <jsjer@unapec.edu.do>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.0"
uvicorn = {extras = ["standard"], version = "^0.28.0"}
pydantic = "^2.6.4"
pydantic-settings = "^2.2.1"
sqlmodel = ">=0.0.22,<0.1.0"
aiosqlite = "^0.20.0"
alembic = "^1.13.0"
scikit-learn = "^1.4.1"
numpy = "^2.0.0"
pandas = "^2.2.0"
networkx = "^3.2.1"
rapidfuzz = "^3.0.0"
pyjwt = "^2.9.0"
bcrypt = "^4.2.0"
httpx = "^0.27.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
pytest-asyncio = "^0.23.5"
ruff = "^0.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP", "ASYNC", "S", "T20"]
ignore = ["S101"]

[tool.ruff.lint.isort]
combine-as-imports = true
known-first-party = ["src"]
